Update 'rgi6nozrq-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:e1d251199644363a871f843f59bc1173d0920bec@sha256:d409c5d3f3ee33618a927440eeb4563b75c6605a2beea7b097ade20af0aba0ba

--- a/components/rgi6nozrq-go/overlays/development/deployment-patch.yaml
+++ b/components/rgi6nozrq-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rgi6nozrq-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:e1d251199644363a871f843f59bc1173d0920bec@sha256:d409c5d3f3ee33618a927440eeb4563b75c6605a2beea7b097ade20af0aba0ba
+          name: container-image
